style/base.css
* {
    scrollbar-color: var(--accent) transparent;
}

html {
    height: auto;
    min-height: 100%;
    border-top: solid 8px var(--accent2);
    border-bottom: solid 8px var(--accent2);
}

html, body {
    font-size: var(--font-size);
    font-family: var(--font-family);
    line-height: var(--line-height);
    color: var(--foreground);
    background-color: var(--background);
}

body {
    min-width: 460px;
    width: calc(100% - var(--large-spacing));
    max-width: calc(960px + var(--large-spacing));
    margin-top: var(--large-spacing);
    margin-left: auto;
    margin-right: auto;
    display: flex;
    flex-direction: column;
    align-items: stretch;
    gap: var(--small-spacing);
}

p, h1, h2, h3, h4, h5, h6 {
    margin-bottom: var(--small-spacing);
}

.singlepageheader, .multipageheader {
    width: 100%;   
}

.singlepageheader > img {
    width: 100%;
    height: auto; 
}

.multipageheader {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    gap: var(--large-spacing);
}

.multipageheader > .title {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.multipageheader > img {
    width: 30%;
    height: auto;
    max-height: 256px;
}

nav {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    gap: var(--large-spacing);
}

nav > a {
    font-size: calc(var(--font-size) * 2);
    text-transform: uppercase;
    font-weight: 700;
}

nav > .active {
    text-decoration: underline;
}

main {
    display: flex;
    flex-direction: column;
    align-items: stretch;
    gap: var(--small-spacing);
}

main > article {
    background-color: var(--text-background);
    padding: var(--small-spacing);
    border-radius: var(--border-radius);
}

main > section > iframe, main > article > iframe {
    width: 100%;
}

main > section p:last-child, main > article p:last-child {
    margin-bottom: 0 !important;
}

footer {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding: 0 var(--small-spacing) 0 var(--small-spacing);
    margin: 0 0 var(--small-spacing) 0;
}

footer div{
    display: flex;
    flex-flow: column;
    justify-content: center;
}

footer .socials {
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: var(--large-spacing);
}

footer > .socials > a  {
    position: relative;
    top: 0;
    transition: top 0.25s ease;
}

footer > .socials > a:hover {
    top: calc(-4px);
}

ul {
    padding-left: var(--small-spacing);
}

a {
    font-weight: 300;
    color: var(--accent);
    text-decoration: none;
    transition: color 0.25s ease;
}

a:hover {
    text-decoration: underline;
    color: var(--accent-hover);
}

.gallery {
    position: relative;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    gap: var(--small-spacing);
}

.gallery > figure {
    flex-grow: 0;
    flex-shrink: 0;
    flex-basis: calc(50% - var(--small-spacing) / 2);
    position: relative;
    border-radius: var(--border-radius);
    overflow: hidden;
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    justify-content: center;
    top: 0;
    transition: top 0.25s ease;
}

@media screen and (max-width: 720px) {
    .gallery > figure {
        flex-basis: 100%;
    }
}

.gallery > figure img {
    width: 100%;
    height: auto;
    border-radius: var(--border-radius);
}

.gallery > figure.link{
    cursor: pointer;
}

.gallery > figure.link:hover {
    top: calc(var(--small-spacing) / 2 * -1);
}

.gallery > figure > figcaption  {
    background-color: var(--background);
    text-align: center;
    border-radius: 0 0 var(--border-radius) var(--border-radius);
    margin-top: calc(var(--line-height) * -1);
}

.gallery > figure.link > figcaption.link  {
    font-weight: 300;
    background-color: var(--accent);
    text-decoration: none;
    transition: color 0.25s ease;
}

.gallery > figure.link:hover > figcaption.link  {
    background-color: var(--accent-hover);
    text-decoration: underline;
}

